--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,11 @@
 <h1>We are in the creation of a blog2</h1>
+<!-- Vamos a realizar una iteración en cada una de las publicaciones -->
+<!-- que se almacenaran en el index -->
+
+<% @posts.each do |post|  %>
+  <div class="post_wrapper">
+    <h2 class="title"><%= link_to post.title, post  %></h2>
+    <p class="date"><%= post.created_at.strftime("%B, %d, %Y") %></p>
+  </div>
+
+<% end %>
