added design and style

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<h1>We are in the creation of a blog2</h1>
+<h1><center>  We are in the creation of a blog2</center></h1>
 <!-- Vamos a realizar una iteración en cada una de las publicaciones -->
 <!-- que se almacenaran en el index -->
 
