--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,27 @@
   </head>
 
   <body>
+    <div id="sidebar">
+      <div id="logo">
+        <%= link_to root_path do %>
+          <%= image_tag "image.svg" %>
+        <% end %>
+      </div>
+
+      <ul>
+        <li class = "category">website</li>
+        <li><%= link_to "Blog2", root_path %></li>
+        <li>About</li>
+      </ul>
+
+      <ul>
+        <li class= "category">Social</li>
+        <li><a href="https://twitter.com/mackenziechild">Twitter</a></li>
+        <li><a href="http://instagram.com/mackenziechild">Instagram</a></li>
+        <li><a href="https://github.com/mackenziechild">Github</a></li>
+        <li><a href="mailto:ayf1207@hmail.com">Email</a></li>
+      </ul>
+    </div>
     <%= yield %>
   </body>
 </html>
