--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,11 +1,12 @@
 <!-- la vista donde se muestra los comentarios creados -->
-
-<h1 class = 'title'>
-<%= @post.title  %>
-</h1>
-<p class = 'date'>
-submited <%= time_ago_in_words(@post.created_at) %> Ago
-</p>
-<p class = 'body'>
-<%= @post.body %>
-</p>
+<div id="posts_content">
+  <h1 class = 'title'>
+  <%= @post.title  %>
+  </h1>
+  <p class = 'date'>
+  submited <%= time_ago_in_words(@post.created_at) %> Ago
+  </p>
+  <p class = 'body'>
+  <%= @post.body %>
+  </p>
+</div>
