--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Blog2</title>
+    <title>Blog</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -20,8 +20,8 @@
 
       <ul>
         <li class = "category">website</li>
-        <li><%= link_to "Blog2", root_path %></li>
-        <li>About</li>
+        <li><%= link_to "Blog", root_path %></li>
+        <li><%= link_to "About", about_path %></li>
       </ul>
 
       <ul>
@@ -31,12 +31,20 @@
         <li><a href="https://github.com/mackenziechild">Github</a></li>
         <li><a href="mailto:ayf1207@hmail.com">Email</a></li>
       </ul>
-      <p class = "sign_in">Admin Login</p>
+      <p class = "sign_in">ACO
+dmin Login</p>
     </div>
       <!-- codigo para trabajar la barra de arriba -->
       <div id="main_content">
         <div id="header">
-          <p>All Posts</p>
+          <% if current_page?(root_path) %>
+            <p>All Posts</p>
+          <% elsif current_page?(about_path) %>
+            <p>About</p>
+          <% else %>
+            <%= link_to "Back to All Posts", root_path %>
+          <% end %>
+
           <div class="buttons">
             <button class="button"> <%= link_to "New Post", new_post_path %> </button>
             <button class="button">Log Out</button>
